kubernetes/namespace.yaml
# Namespace for the applications
#   CONTOSO_APP_NAMESPACE will be replace with the namsespace from the main.bicep deployment
apiVersion: v1
kind: Namespace
metadata:
  name: CONTOSO_APP_NAMESPACE
